--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-py2neo
-PyYAML
-nltk
-wordcloud
-stanfordnlp
-textacy
-xlrd
+Scrapy==1.8.0
+py2neo==4.3.0
+PyYAML==5.2
+pandas==0.25.3
+spacy==2.2.3
+textacy==0.9.1
+wordcloud==1.6.0
